@@ -18,13 +18,12 @@
 import org.apache.tools.ant.taskdefs.condition.Os
 import org.apache.tools.ant.types.Commandline
 import org.gradle.api.tasks.testing.logging.*
-import org.apache.lucene.gradle.ErrorReportingTestListener
 
 def resources = scriptResources(buildscript)
 def verboseModeHookInstalled = false
 
 allprojects {
-  plugins.withType(JavaPlugin) {
+  plugins.withType(JavaPlugin).configureEach {
     project.ext {
       // This array will collect all test options, including default values and option description.
       // The actual values of these properties (defaults, project properties) are resolved lazily after evaluation
@@ -34,30 +33,33 @@ allprojects {
           // asserts, debug output.
           [propName: 'tests.verbose', value: false, description: "Enables verbose mode (emits full test outputs immediately)."],
           [propName: 'tests.workDir',
-           value: { -> project.relativePath(file("${buildDir}/tmp/tests-tmp")) },
-           description: "Working directory for forked test JVMs",
-           includeInReproLine: false
+              value: {-> project.relativePath(file("${buildDir}/tmp/tests-tmp"))},
+              description: "Working directory for forked test JVMs",
+              includeInReproLine: false
           ],
           // JVM settings
           [propName: 'tests.minheapsize', value: "256m", description: "Minimum heap size for test JVMs"],
           [propName: 'tests.heapsize', value: "512m", description: "Heap size for test JVMs"],
           // Test forks
           [propName: 'tests.jvms',
-           value: { -> ((int) Math.max(1, Math.min(Runtime.runtime.availableProcessors() / 2.0, 4.0))) },
-           description: "Number of forked test JVMs"],
+              value: {->
+                ((int) Math.max(1, Math.min(Runtime.runtime.availableProcessors() / 2.0, 4.0)))},
+              description: "Number of forked test JVMs",
+              includeInReproLine: false],
           [propName: 'tests.haltonfailure', value: true, description: "Halt processing on test failure."],
           // Default code cache size is 240m, but disabling C2 compiler shrinks it to 48m, which turns out to not be enough
           [propName: 'tests.jvmargs',
-           value: { -> propertyOrEnvOrDefault("tests.jvmargs", "TEST_JVM_ARGS", "-XX:TieredStopAtLevel=1 -XX:+UseParallelGC -XX:ActiveProcessorCount=1 -XX:ReservedCodeCacheSize=120m") },
-           description: "Arguments passed to each forked JVM."],
+              value: {->
+                propertyOrEnvOrDefault("tests.jvmargs", "TEST_JVM_ARGS", "-XX:TieredStopAtLevel=1 -XX:+UseParallelGC -XX:ActiveProcessorCount=1 -XX:ReservedCodeCacheSize=120m")},
+              description: "Arguments passed to each forked JVM."],
           // Other settings.
           [propName: 'tests.neverUpToDate', value: true,
-           description: "Make test tasks always fail the up-to-date checks (rerun) even if the inputs have not changed."],
+              description: "Make test tasks always fail the up-to-date checks (rerun) even if the inputs have not changed."],
       ]
 
       // Resolves test option's value.
-      resolvedTestOption = { propName ->
-        def option = testOptions.find { entry -> entry.propName == propName }
+      resolvedTestOption = {propName ->
+        def option = testOptions.find {entry -> entry.propName == propName}
         if (option == null) {
           throw new GradleException("No such test option: " + propName)
         }
@@ -78,28 +80,29 @@ allprojects {
     if (verboseMode && !verboseModeHookInstalled) {
       verboseModeHookInstalled = true
       if (gradle.startParameter.maxWorkerCount > 1) {
-        gradle.taskGraph.whenReady { graph ->
-          def testTasks = graph.allTasks.findAll { task -> task instanceof Test }
+        gradle.taskGraph.whenReady {graph ->
+          def testTasks = graph.allTasks.findAll {task -> task instanceof Test}
           if (testTasks.size() > 1) {
-            throw new GradleException("Run your tests in verbose mode only with --max-workers=1 option passed to gradle.")
+            throw new GradleException(
+                "Run your tests in verbose mode only with --max-workers=1 option passed to gradle.")
           }
         }
       }
     }
 
-    tasks.withType(Test) {
+    tasks.withType(Test).configureEach {
       ext {
         testOutputsDir = file("${reports.junitXml.outputLocation.get()}/outputs")
       }
 
       // LUCENE-9660: Make it possible to always rerun tests, even if they're incrementally up-to-date.
       if (resolvedTestOption("tests.neverUpToDate").toBoolean()) {
-        outputs.upToDateWhen { false }
+        outputs.upToDateWhen {false}
       }
 
       maxParallelForks = resolvedTestOption("tests.jvms") as Integer
       if (verboseMode && maxParallelForks != 1) {
-        logger.lifecycle("tests.jvm forced to 1 in verbose mode.")
+        logger.lifecycle("tests.jvms forced to 1 in verbose mode.")
         maxParallelForks = 1
       }
 
@@ -112,12 +115,13 @@ allprojects {
       ignoreFailures = resolvedTestOption("tests.haltonfailure").toBoolean() == false
 
       jvmArgs Commandline.translateCommandline(resolvedTestOption("tests.jvmargs"))
-      
-      // Up to JDK-15 we have to enforce --illegal-access=deny, because we want no code to access
-      // JDK internals; JDK-16 and later will default to deny, see https://openjdk.java.net/jeps/396:
-      if (rootProject.runtimeJavaVersion < JavaVersion.VERSION_16) {
-        jvmArgs '--illegal-access=deny'
+
+      // Enable the vector incubator module on supported Java versions:
+      if (rootProject.vectorIncubatorJavaVersions.contains(rootProject.runtimeJavaVersion)) {
+        jvmArgs '--add-modules', 'jdk.incubator.vector'
       }
+
+      jvmArgs '--enable-native-access=ALL-UNNAMED'
 
       def loggingConfigFile = layout.projectDirectory.file("${resources}/logging.properties")
       def tempDir = layout.projectDirectory.dir(testsTmpDir.toString())
@@ -154,7 +158,8 @@ allprojects {
       }
 
       // Disable HTML report generation. The reports are big and slow to generate.
-      reports.html.required = false
+      reports.html.required =
+          Boolean.parseBoolean(providers.gradleProperty("tests.html").getOrElse("false"))
 
       // Set up logging.
       testLogging {
@@ -173,7 +178,10 @@ allprojects {
       }
 
       def spillDir = getTemporaryDir().toPath()
-      def listener = new ErrorReportingTestListener(test.testLogging, spillDir, testOutputsDir.toPath(), verboseMode)
+      def listener = buildinfra.newErrorReportingTestListener(test.testLogging,
+          spillDir,
+          testOutputsDir.toPath(),
+          verboseMode)
       addTestOutputListener(listener)
       addTestListener(listener)
 
